checkin commit. fix in progress for display picture alignment

--- a/styles/global.css
+++ b/styles/global.css
@@ -47,8 +47,8 @@ img {
 }
 
 .displaypicture {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+  /* display: flex; */
+  /* flex-direction: column; */
+  /* align-items: center; */
   background-color: antiquewhite;
 }
